--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel": "8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-fade": "8.3.0",
+    "embla-carousel-react": "8.3.0",
     "lucide": "^0.452.0",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "8.3.0",
-		"embla-carousel": "8.3.0",
-		"embla-carousel-fade": "8.3.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "daisyui": "^4.12.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
